# kmz2shapefile

./: .dockerignore  .gitignore  CLAUDE.md  README.md  Startup.bat  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: build_exe.py
src/kmz2shapefile/: __init__.py  cli.py  converter.py  exceptions.py  field_mapper.py  geometry.py  gui.py  html_parser.py  kml_parser.py  kmz_extractor.py  shapefile_builder.py
tests/: __init__.py  test_converter.py  test_field_mapper.py  test_geometry.py  test_html_parser.py  test_kml_parser.py  test_shapefile_builder.py
